syntax = "proto3";

package servicios_streaming;

option go_package = "./servicios_streaming";
option java_package = "co.edu.unicauca.distribuidos.streaming";
option java_outer_classname = "StreamingProto";

service AudioService {
    rpc StreamAudio(PeticionDTO) returns (stream FragmentoCancion);
}

// Mensaje que el cliente envía para solicitar una canción.
message PeticionDTO {
    // El nombre del archivo de la canción, ej: "Lamento boliviano.mp3"
    string nombreCancion = 1;
    // NUEVO: El ID del usuario que está solicitando la canción.
    int32 idUsuario = 2;
}

message FragmentoCancion {
    bytes data = 1;
}